--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\EventSystem.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ArchiveManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ResolutionType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserData.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIComponent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Awaiter\AwaiterExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\AEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIEffect.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonFixedUpdate.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageManager.cs" />
@@ -104,6 +106,7 @@
     <Compile Include="Assets\Hotfix\Logic\StatePipeline\EnterGame.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingleton.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Config\TestConfig.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\IEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Transform\TransformExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Global\GlobalManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Video\VideoManager.cs" />
@@ -112,6 +115,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\Singleton.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Game\GamePanel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventData.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\SceneStateAttribute.cs" />
@@ -126,6 +130,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\SceneState\StatePipeline.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\IPanelHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Singleton\ISingletonLateUpdate.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\Panel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Task\TaskExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Language\LanguageType.cs" />
@@ -149,12 +154,6 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIBinding.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\IEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\AEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
