--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -145,6 +145,11 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIBinding.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelAttribute.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelManager.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Model\ModelTemplate.cs" />
+    <Compile Include="Assets\Hotfix\Logic\Model\LoginModel.cs" />
+    <Compile Include="Assets\Hotfix\Logic\Model\MainModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
